--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fullcalendar": "^6.1.17",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "react-big-calendar": "^1.19.2",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
   }
