--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "react-big-calendar": "^1.19.2",
     "react-multi-carousel": "^2.8.6",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
