--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
+    "@tanstack/react-query": "^5.80.7",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "shopify-buy": "^3.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
