--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "stripe": "^18.2.1"
   }
 }
